# map_based_pose_initializer

./: CMakeLists.txt  package.xml
config/: map_based_pose_initializer.param.yaml
include/map_based_pose_initializer/: map_based_pose_initializer.hpp
launch/: map_based_pose_initializer.launch.xml
src/: map_based_pose_initializer.cpp
